--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
    <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-enforcer-plugin</artifactId>
-  <version>3.6.2</version>
+  <version>[17,)</version>
   <executions>
     <execution>
       <id>enforce-maven</id>
